[gd_scene load_steps=15 format=2]

[ext_resource path="res://Models/button.obj" type="ArrayMesh" id=1]
[ext_resource path="res://shaders/psx_lit.shader" type="Shader" id=2]
[ext_resource path="res://Nodes/Button/Button.gd" type="Script" id=3]
[ext_resource path="res://Textures/redflag.png" type="Texture" id=4]
[ext_resource path="res://shaders/psx_unlit_alpha-scissor.shader" type="Shader" id=5]
[ext_resource path="res://Textures/Spokes 5 - 128x128.png" type="Texture" id=6]
[ext_resource path="res://Sounds/buttonpressed1.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/235968__tommccann__explosion-01.wav" type="AudioStream" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/precision_multiplier = 1.0
shader_param/modulate_color = Color( 1, 1, 1, 1 )
shader_param/uv_scale = Vector2( 1, 1 )
shader_param/uv_offset = Vector2( 0, 0 )
shader_param/uv_pan_velocity = Vector2( 0, 0 )
shader_param/albedoTex = ExtResource( 6 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("button:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.132898, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("button:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "press"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("button:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.132898, 0 ), Vector3( 0, 0.187597, 0 ), Vector3( 0, -0.631753, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("button:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1.1, 1, 1.1 ), Vector3( 0, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 0.248428, 1 )

[sub_resource type="QuadMesh" id=5]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 5 )
shader_param/precision_multiplier = 1.0
shader_param/modulate_color = Color( 1, 0, 0, 1 )
shader_param/uv_scale = Vector2( 1, 1 )
shader_param/uv_offset = Vector2( 0, 0 )
shader_param/billboard = true
shader_param/y_billboard = false
shader_param/alpha_scissor = 0.1
shader_param/albedoTex = ExtResource( 4 )

[node name="Button" type="StaticBody"]
collision_layer = 8
script = ExtResource( 3 )

[node name="button" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.132898, 0 )
mesh = ExtResource( 1 )
material/0 = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/press = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 4 )

[node name="Flag" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.674087, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="ButtonCheckRays" type="Spatial" parent="."]

[node name="RayCast" type="RayCast" parent="ButtonCheckRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2 )
collision_mask = 8

[node name="RayCast2" type="RayCast" parent="ButtonCheckRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 2 )
collision_mask = 8

[node name="RayCast3" type="RayCast" parent="ButtonCheckRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0 )
collision_mask = 8

[node name="RayCast4" type="RayCast" parent="ButtonCheckRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -2 )
collision_mask = 8

[node name="RayCast5" type="RayCast" parent="ButtonCheckRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2 )
collision_mask = 8

[node name="RayCast6" type="RayCast" parent="ButtonCheckRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, -2 )
collision_mask = 8

[node name="RayCast7" type="RayCast" parent="ButtonCheckRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 0 )
collision_mask = 8

[node name="RayCast8" type="RayCast" parent="ButtonCheckRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 2 )
collision_mask = 8

[node name="PressSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )
unit_db = 4.0

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
